<resources>
    <string name="app_name">RefShare</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="submit">Sign Up</string>
    <string name="login">Already have an account? Sign In</string>
    <string name="signin">Sign In</string>
    <string name="signup">Don\'t have and account? Sign Up</string>
    <string name="hello">Hello,</string>
    <string name="username">Username</string>
    <string name="refcode">Code</string>
    <string name="code">XXXXX</string>
    <string name="points">Points</string>
    <string name="pointsnum">100</string>
    <string name="share">Share</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
</resources>
