<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textview_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="35sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAllCaps="false"
            android:textColor="@color/colorGreyDark"
            android:textSize="32sp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/textview_hello" />

        <TextView
            android:id="@+id/textview_referralcode"
            android:layout_below="@+id/textview_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refcode"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/textview_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textAllCaps="false"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/textview_referralcode"/>

        <TextView
            android:id="@+id/textview_points"
            android:layout_below="@+id/textview_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/textview_pointsnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pointsnum"
            android:textAllCaps="false"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/textview_points" />

        <Button
            android:id="@+id/button_signingout"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/background_round"
            android:drawableTop="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/background_round"
            android:drawableTop="@drawable/ic_share"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="25sp" />

    </RelativeLayout>
    
</android.support.design.widget.CoordinatorLayout>