<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain">

    <RelativeLayout
        android:id="@+id/Relayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/Relayout_1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_toStartOf="@id/applogintitle"
                android:background="@android:color/white"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/applogintitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_toEndOf="@id/applogintitle"
                android:background="@android:color/white"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Relayout_1_2"
            android:layout_below="@id/Relayout_1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/textview_email_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edittext_email_lin"
                android:layout_below="@id/textview_email_lin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/background_textfields" />

            <TextView
                android:id="@+id/textview_password_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_email_lin"
                android:text="@string/password"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/edittext_password_lin"
                android:layout_below="@id/textview_password_lin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:background="@drawable/background_textfields"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/signin_button_lin"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edittext_password_lin"
                android:layout_marginTop="50dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:background="@drawable/background_buttons"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/signup_button_lin"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>